# sysTrade

./: .gitignore  README.md  TODO.md  backTest.py  backTestCustom.html  back_test.py  chart_monitor.py  config_structure_summary.md  event_monitor.py  finance_score.py  finance_score_copy.py  forcast_model.py  main.py  migrate_data_structure.py  news_crawler.py  pyproject.toml  requirements.txt  search_macro.py  search_stocks.py  setup_uv_env.sh  st_utils.py  system_trade.py  test_all_stocks.py  test_hugel.py  test_hugel_debt_ratio.py  theme_code.py  theme_monitor.py  trade_strategy.py
4_shared/cache/: kis-token_20250714-025440.json  kis-token_20250715-002808.json  kis-token_20250720-234439.json  kis-token_20250723-004136.json
api/: __init__.py  main.py
api/routes/: __init__.py  backtest.py  data.py  discovery.py  strategy.py
api/templates/: discovery.html
config/: config.yaml  kisdev_vi.yaml  logging.yaml
core/data_providers/: __init__.py  external_data_provider.py  fdr_data_provider.py  kis_data_provider.py  pykrx_data_provider.py  unified_data_provider.py
core/engines/: __init__.py  backtest_engine.py  trading_engine.py
core/risk_management/: __init__.py  risk_manager.py
core/strategies/: __init__.py  base_strategy.py  sample_strategies.py  trading_strategy.py
data/: test.csv
data/news/: 헤드라인-양육지원_2022-08-21.csv  헤드라인-양육지원_2022-08-25.csv
data_new/: README.md
frontend/: __init__.py
frontend/templates/: base.html  (+3 more)
tools/: create_krx_backup.py  custom_logger.py  forcast_model.py  market_condition.py  news_crawler.py  st_utils.py  test_backtest.py
(+9 files in other folders)
