[project]
name = "st-ver0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.10.0",
    "backtesting>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "bertopic>=0.15.0",
    "colorlog>=6.7.0",
    "finance-datareader>=0.9.0",
    "gensim>=4.3.3",
    "glob2>=0.7.0",
    "hdbscan>=0.8.0",
    "httpx>=0.24.0",
    "konlpy>=0.6.0",
    "matplotlib>=3.7.0",
    "mecab-python3>=1.0.0",
    "mplfinance>=0.12.10b0",
    "numpy<2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.3.1",
    "psutil>=5.9.0",
    "pykrx>=1.0.51",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "selenium>=4.15.0",
    "sentence-transformers>=2.2.0",
    "torch>=1.13.0,<2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
    "ujson>=5.8.0",
    "umap-learn>=0.5.0",
    "webdriver-manager>=4.0.0",
    "zipfile36>=0.1.0",
]
